submission box design fixes

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -199,7 +199,7 @@ img{
 .note{
   margin: 10px 0;
   padding:5px 10px;
-  padding-bottomn:10px;
+  padding-bottom:10px;
   clear: both;
   border-radius: 2px;
 }
@@ -245,6 +245,10 @@ img{
   overflow-y: auto;
   overflow-x:hidden;
   right:5%;
+}
+
+.reply-container{
+  height:21% !important;;
 }
 
 .description{
@@ -295,6 +299,11 @@ img{
 .filter-icon:hover{
   border:none;
 }
+
+.note-highlight{
+  background-color: rgba(204, 192, 235, 0.45) !important;
+}
+
 
 .filter-icon-details {
   background-image: url(../images/PNG/note-pin.png);
