--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -8,8 +8,8 @@
      'replyOne' : replyOne,
      'replyTwo' : replyOne== false,
      'note-highlight': currentReply === note.id}">
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote && note.reply_to ==null && notelist.length>1 ">show steps</button>
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote && note.reply_to ==null && notelist.length>1 ">hide steps</button>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote && note.reply_to ==null && notelist.length>=1 ">show step(s)</button>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote && note.reply_to ==null && notelist.length>=1 ">hide step(s)</button>
     <div class="note-steps text">
         <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
         <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
