--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -14,23 +14,19 @@
         <div ng-if="notelist.length<1"> No Associated Step</div>
     </div>
     <div ng-if="!baseline && note.category=='corrections'">
-        <div class="filter-icon filter-icon-corrections note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="filter-icon-corrections note-icon" style="margin-right:5px; background-color: #ffc497;"></div>
         <div class="note-contributor">Corrections</div>
     </div>
-    <div ng-if="!baseline && note.category=='methods'">
-        <div class="filter-icon filter-icon-methods note-icon" style="margin-top:5px; margin-right:5px;"></div>
-        <div class="note-contributor">What is this?</div>
-    </div>
     <div ng-if="!baseline  && note.category=='details'">
-        <div class="filter-icon filter-icon-details note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="filter-icon-details note-icon" style="margin-right:5px; background-color:#e0d4ff;"></div>
         <div class="note-contributor">Tell Me More!</div>
     </div>
     <div ng-if="!baseline && note.category=='questions'">
-        <div class="filter-icon filter-icon-questions note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="filter-icon-questions note-icon" style=" margin-right:5px; background-color:#fff07d;"></div>
         <div class="note-contributor">Questions</div>
     </div>
-    <div ng-if="!baseline && note.category=='other'" style="margin-top:5px">
-        <div class="filter-icon filter-icon-other note-icon" style="margin-top:5px; margin-right:5px;"></div>
+    <div ng-if="!baseline && note.category=='other'">
+        <div class="filter-icon-other note-icon" style=" margin-right:5px; background-color: #d4ed96;"></div>
         <div class="note-contributor">Other</div>
     </div>
 
