--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -35,6 +35,22 @@ img{
   padding: 0 0 0 5px;
 }
 
+.prime-background{
+  background-color:#6397e8;
+}
+
+.prime-text{
+  color:#6397e8;
+}
+
+.prime-background:hover{
+  background-color:#1249a1;
+}
+
+.prime-text:hover{
+  color:#1249a1;
+}
+
 .icon{
   background-repeat: no-repeat;
   background-size: 16px;
@@ -275,18 +291,31 @@ img{
   background-color: #ececec !important;
 }
 
-.filter-icon{
+.note-header{
   background-repeat: no-repeat;
   background-size: 14px;
   outline:none;
-  border-radius: 20px;
   height: 15px;
   line-height: 9px;
   width: 15px;
   position: relative;
+  margin-right:5px;
 }
 
-.filter-icon:hover{
+.note-header:after{
+  background:inherit;
+  bottom: 0;
+  display:block;
+  height:50%;
+  left:0;
+  position:absolute;
+  right:0;
+  transform:skewY(1.5deg);
+  transform-origin:100%;
+  z-index:-1;
+}
+
+.note-header:hover{
   border:none;
 }
 
@@ -295,22 +324,26 @@ img{
 }
 
 
-.filter-icon-details {
+.note-header-details {
   background-image: url(../images/PNG/note-pin.png);
   background-size: 14px;
+  background-color:#e0d4ff;
 }
-.filter-icon-corrections {
+.note-header-corrections {
   background-image: url(../images/PNG/note-healing.png);
+  background-color: #ffc497;
 }
 
-.filter-icon-questions {
+.note-header-questions {
   background-image: url(../images/PNG/note-question.png);
   background-size: 13px;
+  background-color:#fff07d;
 }
 
-.filter-icon-other {
+.note-header-other {
   background-image: url(../images/PNG/note-other.png);
   background-size: 17px;
+  background-color: #d4ed96;
 }
 
 .note-icon{
@@ -326,7 +359,6 @@ img{
 }
 
 .plain-button {
-  background-color: #62e2d9;
   float: right;
   padding: 1.5px 10px;
   position: relative;
@@ -341,10 +373,6 @@ img{
   outline:none;
 }
 
-.plain-button:hover{
-  background-color: #62e2d9;
-  color:white;
-}
 
 .comment-footer{
   padding-top: 5px;
@@ -415,6 +443,7 @@ h2{
 }
 
 .contributors-hide:hover{
+  background-image: url(../images/SVG/ContributorsShowLessHover.svg);
 }
 
 
@@ -501,7 +530,6 @@ h2{
 }
 
 .selected-steps {
-  //font-weight: bold;
   font-family:'Open sans', sans-serif;
   color: #6f6f6f;
   padding-left: 10px;
@@ -518,7 +546,6 @@ h2{
   margin: 0 10px;
   float: right;
   color: red;
-  //border-radius: 3px;
 }
 
 .delete-button:hover {
@@ -531,7 +558,6 @@ h2{
   font-size: 1em;
   font-family:'Open sans', sans-serif;
   float: right;
-  //margin-right:10px;
   color: #bababa;
   font-weight:bold;
 }
@@ -552,19 +578,16 @@ h2{
 }
 
 .close-button-second {
-  //margin-right: 3.4%;
 }
 
 .return-button {
   font-size: 0.8em;
   font-family:'Open sans', sans-serif;
-  color:#62e2d9;
   font-weight:bold;
 }
 
 .return-button:hover {
-  color:#226B64;
-  text-decoration: underline #226B64;
+  text-decoration: underline #1249a1;
 }
 
 .note-rating {
@@ -581,8 +604,7 @@ h2{
 }
 
 .rating-button {
-  background-image: url(../images/SVG/unSelectedThumb.svg);
-  background-position: 0px 0;
+  background-image: url(../images/SVG/unselectedThumb.svg);
   background-repeat: no-repeat;
   background-size: 20px;
   height: 28px;
@@ -593,7 +615,7 @@ h2{
 }
 
 .rated{
-  background-image: url(../images/SVG/thumbsupSelected.svg);
+  background-image: url(../images/SVG/selectedThumb.svg);
 }
 
 .step-list {
@@ -603,14 +625,12 @@ h2{
   text-align: left;
   font-weight: bold;
   font-family:'Open sans', sans-serif;
-  color: #62e2d9;
   background-color: white;
   margin:0 -1%;
 }
 
 .menu-action-button {
   float: right;
-  //border-left: 2px solid #e6e6e6;
   outline: none;
 }
 
@@ -618,30 +638,25 @@ h2{
   padding: 2px 10px;
   font-weight:bold;
   font-family:'Open sans', sans-serif;
-  color:#62e2d9;
   font-size:22px;
 }
 
-.plus-action-button:hover{
-  color:#226B64;
-}
-
 .minus-action-button:hover{
-  color:#62e2d9;
+  color:#6397e8;
 }
 
 .minus-action-button {
   padding: 2px 12px;
   font-weight:bold;
   font-family:'Open sans', sans-serif;
-  color:#226B64;
+  color:#1249e8;
   font-size:22px;
 }
 
 .selected-menu-button {
-  color:#226B64;
   background:#f9f9f9;
   border-top: 1px solid #e6e6e6;
+  color:#1249a1;
 }
 
 .menu-button {
@@ -689,11 +704,11 @@ h2{
 }
 
 .menu-one:hover{
-  //background-image: url(../images/PNG/arrow-right-hover.png);
+  background-image: url(../images/SVG/rightHover.svg);
 }
 
 .menu-two:hover{
-  //background-image: url(../images/PNG/arrow-left-hover.png);
+  background-image: url(../images/SVG/leftHover.svg);
 }
 
 .text{
