--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -14,19 +14,19 @@
         <div ng-if="notelist.length<1"> No Associated Step</div>
     </div>
     <div ng-if="!baseline && note.category=='corrections'">
-        <div class="filter-icon-corrections note-icon" style="margin-right:5px; background-color: #ffc497;"></div>
+        <div class="note-header-corrections note-icon"></div>
         <div class="note-contributor">Corrections</div>
     </div>
     <div ng-if="!baseline  && note.category=='details'">
-        <div class="filter-icon-details note-icon" style="margin-right:5px; background-color:#e0d4ff;"></div>
+        <div class="note-header-details note-icon"></div>
         <div class="note-contributor">Tell Me More!</div>
     </div>
     <div ng-if="!baseline && note.category=='questions'">
-        <div class="filter-icon-questions note-icon" style=" margin-right:5px; background-color:#fff07d;"></div>
+        <div class="note-header-questions note-icon"></div>
         <div class="note-contributor">Questions</div>
     </div>
     <div ng-if="!baseline && note.category=='other'">
-        <div class="filter-icon-other note-icon" style=" margin-right:5px; background-color: #d4ed96;"></div>
+        <div class="note-header-other note-icon"></div>
         <div class="note-contributor">Other</div>
     </div>
 
@@ -38,7 +38,7 @@
 
     <div class="note-content">{{note.content}}</div>
     <div class="comment-footer">
-        <button class="plain-button reply-button"
+        <button class="plain-button prime-background reply-button"
              ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">
                 REPLY
         </button>
