--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -279,17 +279,24 @@ img{
 .input-start {
   background-image: url(../images/SVG/unselectedAdd.svg);
   background-size: 22px;
-  background-position: 4px 3px;
+  background-position: 0 3px;
+  margin-left:16%;
   height: 27px;
-  position: absolute;
   width: 27px;
-  z-index:100;
   border:none;
 }
 
 .input-start:hover {
   background-image: url(../images/SVG/hoverAdd.svg);
   border:none;
+}
+
+.input-gone{
+  background-image: url(../images/PNG/whiteAdd.png);
+  background-size: 22px;
+  background-position: 0 3px;
+  height: 27px;
+  width: 27px;
 }
 
 .ui-select-bootstrap .ui-select-choices-row.active>span {
