--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -16,19 +16,19 @@
         <div ng-if="general">General</div>
     </div>
     <div ng-if="note.category=='corrections'">
-        <div class="filter-icon note-icon-corrections note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="note-header-corrections note-icon" style="margin-top:5px; margin-right:5px;"></div>
         <div class="note-contributor">Corrections</div>
     </div>
     <div ng-if="note.category=='details'">
-        <div class="filter-icon note-icon-details note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="note-header-details note-icon" style="margin-top:5px; margin-right:5px;"></div>
         <div class="note-contributor">Tell Me More!</div>
     </div>
     <div ng-if="note.category=='questions'">
-        <div class="filter-icon note-icon-questions note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="note-header-questions note-icon" style="margin-top:5px; margin-right:5px;"></div>
         <div class="note-contributor">Questions</div>
     </div>
     <div ng-if="note.category=='other'">
-        <div class="filter-icon note-icon-other note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="note-header-other note-icon" style="margin-top:5px; margin-right:5px;"></div>
         <div class="note-contributor">Other</div>
     </div>
 
