fixed add buwhite

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -263,6 +263,7 @@ img{
   color: #535353;
   font-weight:400;
   font-family:'Open sans', sans-serif;
+  cursor:pointer;
 }
 
 .dropdown {
@@ -466,6 +467,7 @@ h2 {
   line-height: 9px;
   width: 26px;
   margin-right: 4px;
+  cursor:pointer;
 }
 
 .contributors-show:hover{
@@ -488,6 +490,7 @@ h2 {
   line-height: 9px;
   width: 26px;
   margin-right: 4px;
+  cursor:pointer;
 }
 
 
@@ -533,6 +536,7 @@ h2 {
   font-size: medium;
   font-family:'Open sans', sans-serif;
   color: #8d8d8d;
+  cursor:pointer;
 }
 
 .note-number {
@@ -670,6 +674,7 @@ h2 {
   font-weight: bold;
   font-family:'Open sans', sans-serif;
   background-color: white;
+  cursor:pointer;
 }
 
 .disabled-steps {
