small font size changes

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -498,6 +498,7 @@ h2{
 
 .window-title {
   font-weight: bold;
+  font-size:98%;
   font-family:'Open sans', sans-serif;
   color: #6f6f6f;
   margin-left: 2%;
