working on getting it ready to be pushed live

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -35,7 +35,7 @@ img{
 }
 
 .note-content{
-  padding:0 15px;
+  padding:0 6.5%;
   margin:5px 0;
   font-family:'Open sans', sans-serif;
   font-size:13px;
@@ -147,7 +147,7 @@ img{
   width: 25px;
   margin-left:-10px !important;
   margin-top:-5px !important;
-  margin-right:0.6%;
+  margin-right:3% !important;
 }
 
 .filter-icon-details {
@@ -655,7 +655,7 @@ h2 {
   background-size: 20px;
   height: 28px;
   line-height: 9px;
-  width: 25px;
+  width: 35px;
   float: left;
   outline:none;
 }
