--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -346,9 +346,9 @@ img{
   padding: 10px;
   background-color: #efefef;
   position: fixed;
-  right: 20px;
-  top: 16%;//14.7%;
-  height: 81%; //81%;
+  right:1.1%;
+  top: 16%;
+  height: 81%;
   z-index:1;
 }
 
@@ -360,6 +360,7 @@ img{
   position: fixed;
   top: 4.2%;
   height: 12%;
+  right:1.1%;
   box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -373,15 +374,6 @@ img{
   height: 53%;
 }
 
-.sort {
-  right: calc(20% + 20px);
-}
-
-
-.filter {
-  right: 20px;
-  float: right;
-}
 .description {
   border: 1px #ccc dotted;
   margin: 5px 0;
@@ -725,10 +717,11 @@ h2 {
 }
 
 .submit-button{
-  padding: 1% 45%;
-  margin-top:1%;
+  width: 99.8%;
+  margin: 0 0.2%;
   float:left;
   font-size:14px;
+  line-height:140%;
   font-weight:600;
 }
 
