fixed hover icon

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -114,7 +114,7 @@ p{
   margin-right: 4px;
 }
 .contributors-hide:hover{
-   background-image: url(../images/PNG/ContributorsShowLessHover.png);
+   background-image: url(../images/SVG/ContributorsShowLessHover.svg);
    cursor:pointer;
 }
 
