--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -175,7 +175,7 @@ img{
   background-image: url(../images/PNG/other.png);
   background-size: 17px;
   background-position: -1px 1px !important;
-  margin-right: 11% !Important;
+  margin-right: 8.5% !Important;
   border:1.5px solid  #c0d982;
 }
 
@@ -301,6 +301,8 @@ img{
   background-image: url(../images/PNG/whiteAdd.png);
   background-size: 22px;
   background-position: 0 3px;
+  margin-left:16%;
+
   height: 27px;
   width: 27px;
 }
