--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -11,7 +11,8 @@
         <button class="plain-button prime-background reply-button" ng-if="currentReply !== note.id" ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">REPLY</button>
         <button class="plain-button prime-background reply-button" ng-if="currentReply === note.id" ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">Cancel</button>
         <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
-        <button class="rating-button" ng-class="{'rated':note.contributor_list.indexOf(user.id)!=-1}" ng-click="rateIt(note.id)" tooltip="recommend"></button>
+        <button class="rating-button unrated" ng-if="!(note.contributor_list.indexOf(user.id)!=-1)" ng-click="rateIt(note.id)" tooltip="recommend"></button>
+        <button class="rating-button rated" ng-if="note.contributor_list.indexOf(user.id)!=-1" ng-click="rateIt(note.id)" tooltip="unrecommend"></button>
         <div class="note-rating">
             <div ng-if="note.contributor_list.length>1">{{note.contributor_list.length}} people found this helpful.</div>
             <div ng-if="note.contributor_list.length==1">{{note.contributor_list.length}} person found this helpful.</div>
