--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -236,6 +236,8 @@ p{
   background-position: 4px 3px;
   height: 27px;
   width: 27px;
+  outline:none;
+  border:none;
 }
 
 .input-gone{
@@ -244,9 +246,11 @@ p{
   background-position: 4px 3px;
   height: 27px;
   width: 27px;
+  outline:none;
+  border:none;
 }
 
-.input-start:hover{background-image: url(../images/SVG/hoverAdd.svg);;}
+.input-start:hover{background-image: url(../images/SVG/hoverAdd.svg);outline:none;border:none;}
 
 .input-container{
   background-color: #fff;
@@ -268,6 +272,7 @@ p{
 .description{
   border: 1px #ccc dotted;
   margin: 5px 0;
+  margin-top:4%;
   padding: 2px;
 }
 
@@ -288,7 +293,6 @@ p{
   margin-top:0 !important;
   margin-bottom:1px !important;
   border:1px solid #c6c6c6;
-  //position:relative;
 }
 
 .replyOne{
@@ -469,7 +473,7 @@ h2{
   font-size:20px;
   color:#3f3f3f;
   margin-bottom:10px;
-  font-weight:300;
+  font-weight:600;
   font-family:'Open sans', sans-serif;
 }
 
@@ -502,16 +506,21 @@ h2{
 
 .window-title {
   font-weight: bold;
-  font-size:98%;
+  font-size:75%;
   font-family:'Open sans', sans-serif;
   color: #6f6f6f;
-  margin-left: 2%;
+  margin-left: 1.5%;
   float: left;
+}
+
+.placeholder-text{
+  margin-left:8%;
+  margin-top:5%;
 }
 
 .categories-title {
   margin-left: 7.5%;
-  margin-right:3.5%;
+  margin-right:9%;
 }
 
 .selected-steps {
@@ -589,18 +598,23 @@ h2{
 }
 
 .rating-button {
-  background-image: url(../images/SVG/unselectedThumb.svg);
+  background-position: 0 0;
   background-repeat: no-repeat;
   background-size: 20px;
-  height: 28px;
+  height: 23px;
   line-height: 9px;
-  width: 35px;
+  width: 20px;
   float: left;
-  outline:none;
+  outline: none;
+  margin-right: 2%;
 }
 
-.rated{
+.rated,.unrated:hover{
   background-image: url(../images/SVG/selectedThumb.svg);
+}
+
+.unrated, .rated:hover{
+  background-image: url(../images/SVG/unselectedThumb.svg);
 }
 
 .step-list {
