--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -250,7 +250,7 @@ img{
   background-color: #ebb083;
 }
 
-.selected-questions,.filter-icon-questions:hover, .menu-questions:hover, .icon-questions:hover {
+.selected-questions,.filter-icon-questions:hover, .number-questions, .menu-questions:hover, .icon-questions:hover {
   background-color: #ebdc69;
 }
 .selected-other,.number-other,.filter-icon-other:hover, .icon-other:hover {
