--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -67,6 +67,7 @@ img{
   width: 24px;
   position: relative;
   border:1.5px solid white;
+  outline:none;
 }
 
 .filter-icon{
@@ -250,7 +251,7 @@ img{
   background-color: #ebb083;
 }
 
-.selected-questions,.filter-icon-questions:hover, .menu-questions:hover, .icon-questions:hover {
+.selected-questions,.filter-icon-questions:hover, .number-questions, .menu-questions:hover, .icon-questions:hover {
   background-color: #ebdc69;
 }
 .selected-other,.number-other,.filter-icon-other:hover, .icon-other:hover {
