--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -15,6 +15,7 @@ html,body{
 }
 
 img{
+  margin-top:10px;
   max-width: 500px;
   max-height: 200px;
   border: 1px solid #e0e0e0;
@@ -501,7 +502,6 @@ h2{
 .step-title{
   font-size:20px;
   color:#3f3f3f;
-  margin-bottom:10px;
   font-weight:600;
   font-family:'Open sans', sans-serif;
 }
