--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -17,6 +17,7 @@ html,body{
 img{
   max-width: 500px;
   max-height: 200px;
+  margin-top:10px;
   border: 1px solid #000000;
   display: block;
   margin-bottom:15px;
@@ -560,7 +561,6 @@ h2 {
 .step-title{
   font-size:20px;
   color:#3f3f3f;
-  margin-bottom:10px;
   font-weight:600;
   font-family:'Open sans', sans-serif;
 }
