--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -839,7 +839,8 @@ h2 {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #358af7;
+  background-ode"
+  color: #358af7;
 }
 
 .submit-comment-container {
